Fix dashboard sidebar logout button flickering

--- a/public/stylesheets/dashboard/dashboard_sidebar.scss
+++ b/public/stylesheets/dashboard/dashboard_sidebar.scss
@@ -76,6 +76,10 @@
       button {
         display: block;
         text-align: left;
+
+        &:hover {
+          width: 160%;
+        }
       }
     }
   }
